/**
 * Define el contrato para un comentarista de noticias.
 * Un comentarista es responsable de realizar comentarios sobre una noticia.
 * @author Moyano Bustos, Darrull , Zalazar, Moncada
 * @version 1.0
 */
public interface Comentarista {
    
    void comentarNoticia();    
}
