/** Define el contrato para un comentarista de noticias
 * Un comentarista es responsable de realizar comentarios sobre una noticia
 * Este contrato establece el método que debe implementarse para publicar una noticia.
 * @author Moyano Bustos, Darrul, Moncada, Zalazar
**/
public interface Publicador {
    
    void publicarNoticia(); 
    
}